# pack-cycle-analysis

./: .envrc  .gitignore  Analysis.ipynb  README.md  hello.py  pyproject.toml
.dvc/: config
projects/: README.md
projects/C3/: 01_convert.sql  01_parse_cycles.py  02_parse_cycles.py  03_Plot.ipynb  03_plot.py  Analysis.ipynb  README.md  bc6s6p.s  cycles.csv  download.sh  dvc.yaml  plot_discharge_curves.py  standard_deviation.py
projects/C3/data/: .gitignore  cycles.csv  cycles.parquet.dvc  packs.parquet.dvc  sm15k.parquet.dvc
projects/C3/data/pyric/: .gitignore  reg.udral.physics.electricity.SourceTs.0.1.parquet.dvc  reg.udral.service.battery.Status.0.2.parquet.dvc  starcopter.aeric.bms.SystemStatus.0.4.parquet.dvc  starcopter.aeric.bms.Temperatures.0.1.parquet.dvc
projects/C3/data/sm15k/: .gitignore  supply.parquet  supply.parquet.dvc
projects/UN38.3/: Analysis.ipynb  README.md  bc6s.s  cycles.csv  source.parquet
projects/self-discharge/: Analysis.ipynb  README.md
projects/self-discharge/data/: idle_current.csv  idle_voltages.csv
src/pack_cycle_analysis/: __init__.py
