[project]
name = "pack-cycle-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc[s3]>=3.56.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pyarrow>=17.0.0",
    "scipy>=1.14.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
